# jukebox

./: .gitignore  README.md  pyproject.toml
1-data_exploration/: 1-data_exploration.ipynb
2-dev_datascience/: 1-experiment_train.ipynb  2-save_model.ipynb  3-request_model.ipynb
3-prod_datascience/: convert_model.py  data_validation.py  evaluate_model.py  fetch_data.py  prod_train_save_pipeline.py  save_model.py  train_model.py
4-metrics/: 1-trustyai_setup.ipynb  2-counterfactuals.ipynb
libs/: dataset.py  utilities.py
