[project]
name = "jukebox"
version = "0.1.0"
description = "Predictive AI Example under Openshift AI & PyTORCH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]
